--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,16 +3,20 @@
     package="com.chico.homebuch">
 
     <application
-
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.HomeBuch">
-        <activity android:name=".AddNewmoneyMovingActivity"
-            android:screenOrientation="sensorPortrait"/>
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".ReportsActivity"
+            android:screenOrientation="sensorPortrait" />
+        <activity
+            android:name=".AddNewmoneyMovingActivity"
+            android:screenOrientation="sensorPortrait" />
+        <activity
+            android:name=".MainActivity"
             android:screenOrientation="sensorPortrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
